--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,10 +16,10 @@ logging.level.org.springframework.boot.actuate.audit=WARN
 #######################################################################################################################
 # Datasources
 #######################################################################################################################
-#spring.datasource.url=jdbc:mysql://localhost:3306/launchpad?useSSL=false&autoReconnect=true
-#spring.datasource.username=launchpad
-#spring.datasource.password=launchpad
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/launchpad?useSSL=false&autoReconnect=true
+spring.datasource.username=launchpad
+spring.datasource.password=launchpad
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.initialSize=10
 #spring.datasource.maxActive=50
 #spring.datasource.maxIdle=30
@@ -34,6 +34,9 @@ logging.level.org.springframework.boot.actuate.audit=WARN
 #spring.datasource.minEvictableIdleTimeMillis=30000
 #spring.datasource.timeBetweenEvictionRunsMillis=30000
 
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 #######################################################################################################################
 # Spring Boot Web / Embedded Tomcat
 #######################################################################################################################
