--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,8 @@ repositories {
 
 dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator',    version:"${springBootVersion}"
-//    compile group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc',        version:"${springBootVersion}"
+//    compile group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc',      version:"${springBootVersion}"
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa',    version:"${springBootVersion}"
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web',         version:"${springBootVersion}"
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat',      version:"${springBootVersion}"
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-security',    version:"${springBootVersion}"
