--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,11 +10,11 @@ spring.application.name=Launchpad API
 # Logging
 #######################################################################################################################
 logging.file=launchpad-api.log
-#logging.level.com.lighthousesoftware.launchpad=DEBUG
+#logging.level.launchpad=DEBUG
 logging.level.org.springframework.boot.actuate.audit=WARN
 
 #######################################################################################################################
-# Datasources
+# Data Sources
 #######################################################################################################################
 spring.datasource.url=jdbc:mysql://localhost:3306/launchpad?useSSL=false&autoReconnect=true
 spring.datasource.username=launchpad
@@ -37,13 +37,12 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
 #######################################################################################################################
 # Spring Boot Web / Embedded Tomcat
 #######################################################################################################################
 server.port=8080
 server.contextPath=/api
-tomcat.ajp.enabled=true
-tomcat.ajp.port=8001
 
 #######################################################################################################################
 # Spring Boot Web Security
