--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,18 @@
-*.class
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Folders
+.idea/
+.gradle/
+build/
+out/
 
 # Package Files #
 *.jar
 *.war
 *.ear
+*.class
+
+# Locally generated files
+*.log
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-/.idea/
+
