--- a/build.gradle
+++ b/build.gradle
@@ -32,25 +32,18 @@ repositories {
 
 dependencies {
     // Spring
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa',    version:"${springBootVersion}"
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web',         version:"${springBootVersion}"
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-security',    version:"${springBootVersion}"
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa',    version:"${springBootVersion}"
+    compile group: 'org.springframework.boot', name: 'spring-boot-devtools',            version:"${springBootVersion}"
 
     // Groovy
     compile group: 'org.codehaus.groovy', name: 'groovy-all', version:'2.4.7'
-
-    // ORM
-    compile group: 'org.hibernate', name: 'hibernate-core', version: '5.1.0.Final'
-    compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-hibernate5', version: '2.8.5'
-    compile group: 'org.grails', name: 'gorm-hibernate5-spring-boot',    version: '6.0.3.RELEASE'
 
     // Database
     compile group: 'com.h2database', name: 'h2', version: '1.4.192'
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.40'
 
-    // Other
-    compile group: 'joda-time', name: 'joda-time', version: '2.7'
-    
     // Testing
     testCompile(group: 'org.springframework.boot', name: 'spring-boot-starter-test', version:"${springBootVersion}") {
         exclude(module: 'commons-logging')
