--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,7 @@ logging.level.org.springframework.boot.actuate.audit=WARN
 #######################################################################################################################
 # Data Sources
 #######################################################################################################################
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.datasource.url=jdbc:mysql://localhost:3306/launchpad?useSSL=false&autoReconnect=true
 spring.datasource.username=launchpad
