--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+// The CodeNarc plugin performs quality checks on our project's Groovy source files using CodeNarc
+// and generates reports from these checks.
+apply plugin: 'codenarc'
 
 war {
     baseName = 'launchpad'
@@ -73,4 +76,22 @@ test {
 
 task wrapper(type: Wrapper) {
     gradleVersion = '3.2.1'
+}
+
+codenarcMain {
+    ignoreFailures false
+    configFile file('standards/codenarc/codenarc-main.rules')
+
+    maxPriority1Violations 0
+    maxPriority2Violations 5
+    maxPriority3Violations 10
+}
+
+codenarcTest {
+    ignoreFailures true
+    configFile file('standards/codenarc/codenarc-test.rules')
+
+    maxPriority1Violations 0
+    maxPriority2Violations 10
+    maxPriority3Violations 20
 }
