Add base OAuth2 config.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,15 +39,20 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #######################################################################################################################
 # Spring Boot Web / Embedded Tomcat
 #######################################################################################################################
-server.port=8080
+#server.port=8080
 server.contextPath=/api
 
 #######################################################################################################################
-# Spring Boot Web Security
+# Spring Boot Security
 #######################################################################################################################
-security.basic.enabled=false
-security.user.name=admin
-security.user.password=Criazie1
+#security.basic.enabled=false
+#security.user.name=admin
+security.user.password=password
+#security.oauth2.client.client-id=foo
+#security.oauth2.client.client-secret=bar
+#security.oauth2.authorization.checkTokenAccess=isAuthenticated()
+
+logging.level.org.springframework.security=DEBUG
 
 #######################################################################################################################
 # APP CONFIG
