Fixed up integration tests based on my own comments in the PR.

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,20 +1,4 @@
+#######################################################################################################################
+# Spring Testing
+#######################################################################################################################
 spring.profiles.active=test
-
-###############################################################################
-# APP INFO
-###############################################################################
-info.name=@project.name@
-info.description=@project.description@
-info.version=@project.version@
-spring.application.name=Launchpad API
-
-###############################################################################
-# Logging
-###############################################################################
-logging.file=cloudconnect.log
-
-###############################################################################
-# APP CONFIG
-###############################################################################
-
-# Application specific configurations
