Implement CodeNarc to inspect code for violations (#5)
* codeNarc implemented into the gradle build

* fixed violation issues after including 'codeNarc' to the build

* added a line about the use of 'codeNarc' to inspect the code for violations

* added a line about the use of 'codeNarc' to inspect the code for violations

* applied the code violation fixes

* Modified the CodeNarc rules to not enforce:
- Class JavaDoc
- implicit returns

And to enforce:
- NoDef

* Merge branches 'CodingStandards' and 'master' of https://github.com/lssinc/launchpad-java-api into CodingStandards

# Conflicts:
#	src/main/groovy/launchpad/user/UserController.groovy

--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'codenarc'
 
 war {
     baseName = 'launchpad'
@@ -71,6 +72,25 @@ test {
     }
     filter {
         includeTestsMatching "*Spec"
+    }
+}
+
+codenarc {
+    codenarcMain {
+        ignoreFailures false
+        configFile file('codenarc/codenarc-main.rules')
+
+        maxPriority1Violations 0
+        maxPriority2Violations 0
+        maxPriority3Violations 0
+    }
+    codenarcTest {
+        ignoreFailures true
+        configFile file('codenarc/codenarc-test.rules')
+
+        maxPriority1Violations 0
+        maxPriority2Violations 10
+        maxPriority3Violations 40
     }
 }
 
