--- a/src/main/resources/db/changelog/v1-0/db.changelog.yaml
+++ b/src/main/resources/db/changelog/v1-0/db.changelog.yaml
@@ -1,3 +1,7 @@
 databaseChangeLog:
   - include:
       file: db/changelog/v1-0/user.yaml
+  - include:
+      file: db/changelog/v1-0/role.yaml
+  - include:
+      file: db/changelog/v1-0/user_role.yaml
