Reverted to master branch

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,20 +38,15 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #######################################################################################################################
 # Spring Boot Web / Embedded Tomcat
 #######################################################################################################################
-#server.port=8080
+server.port=8080
 server.contextPath=/api
 
 #######################################################################################################################
-# Spring Boot Security
+# Spring Boot Web Security
 #######################################################################################################################
-#security.basic.enabled=false
-#security.user.name=admin
-security.user.password=password
-#security.oauth2.client.client-id=foo
-#security.oauth2.client.client-secret=bar
-#security.oauth2.authorization.checkTokenAccess=isAuthenticated()
-
-logging.level.org.springframework.security=DEBUG
+security.basic.enabled=false
+security.user.name=admin
+security.user.password=Criazie1
 
 #######################################################################################################################
 # APP CONFIG
