--- a/build.gradle
+++ b/build.gradle
@@ -33,12 +33,10 @@ repositories {
 
 dependencies {
     // Spring
-    compile group: 'org.springframework.boot',          name: 'spring-boot-starter-web',        version:"${springBootVersion}"
-    compile group: 'org.springframework.boot',          name: 'spring-boot-starter-data-jpa',   version:"${springBootVersion}"
-    compile group: 'org.springframework.boot',          name: 'spring-boot-starter-security',   version:"${springBootVersion}"
-    compile(group: 'org.springframework.security.oauth', name: 'spring-security-oauth2',         version:"2.0.12.RELEASE") {
-        exclude(module: 'jackson-mapper-asl') // We already have a more recent jackson via Spring Boot
-    }
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web',         version:"${springBootVersion}"
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security',    version:"${springBootVersion}"
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa',    version:"${springBootVersion}"
+    compile group: 'org.springframework.boot', name: 'spring-boot-devtools',            version:"${springBootVersion}"
 
     // Groovy
     compile group: 'org.codehaus.groovy', name: 'groovy-all', version:'2.4.7'
