--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,8 @@ war {
     version = '1.0.0-SNAPSHOT'
 }
 
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
@@ -34,9 +34,11 @@ repositories {
 dependencies {
     // Spring
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web',         version:"${springBootVersion}"
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security',    version:"${springBootVersion}"
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa',    version:"${springBootVersion}"
-    compile group: 'org.springframework.boot', name: 'spring-boot-devtools',            version:"${springBootVersion}"
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security',    version:"${springBootVersion}"
+    compile(group: 'org.springframework.security.oauth', name: 'spring-security-oauth2',         version:"2.0.12.RELEASE") {
+        exclude(module: 'jackson-mapper-asl') // We already have a more recent jackson via Spring Boot
+    }
 
     // Groovy
     compile group: 'org.codehaus.groovy', name: 'groovy-all', version:'2.4.7'
