--- a/src/main/resources/db/changelog/v1-0/db.changelog.yaml
+++ b/src/main/resources/db/changelog/v1-0/db.changelog.yaml
@@ -5,3 +5,7 @@ databaseChangeLog:
       file: db/changelog/v1-0/role.yaml
   - include:
       file: db/changelog/v1-0/user_role.yaml
+  - include:
+      file: db/changelog/v1-0/permission.yaml
+  - include:
+      file: db/changelog/v1-0/role_permission.yaml
