--- a/src/main/resources/db/changelog/v1-0/user_role.yaml
+++ b/src/main/resources/db/changelog/v1-0/user_role.yaml
@@ -26,13 +26,13 @@ databaseChangeLog:
         - addForeignKeyConstraint:
             baseColumnNames: user_id
             baseTableName: user_role
-            constraintName: fk_user_id
+            constraintName: fk_user_role_table_user_id
             referencedColumnNames: id
             referencedTableName: user
         - addForeignKeyConstraint:
             baseColumnNames: role_id
             baseTableName: user_role
-            constraintName: fk_role_id
+            constraintName: fk_user_role_table_role_id
             referencedColumnNames: id
             referencedTableName: role
 
