--- a/src/main/resources/db/changelog/v1-0/role.yaml
+++ b/src/main/resources/db/changelog/v1-0/role.yaml
@@ -23,6 +23,11 @@ databaseChangeLog:
                   type: varchar(255)
                   constraints:
                     nullable: false
+              - column:
+                  name: is_deleted
+                  type: bit(1)
+                  constraints:
+                    nullable: false
   - changeSet:
       id: v1.0-role-seed-roles
       author: Jagadeesh Manne
@@ -36,6 +41,9 @@ databaseChangeLog:
               - column:
                   name: authority
                   value: role.super
+              - column:
+                  name: is_deleted
+                  valueBoolean: false
         - insert:
             tableName: role
             columns:
@@ -45,6 +53,9 @@ databaseChangeLog:
               - column:
                   name: authority
                   value: role.readonly
+              - column:
+                  name: is_deleted
+                  valueBoolean: false
         - insert:
             tableName: role
             columns:
@@ -54,3 +65,6 @@ databaseChangeLog:
               - column:
                   name: authority
                   value: role.standard_user
+              - column:
+                  name: is_deleted
+                  valueBoolean: false
