--- a/src/main/resources/db/changelog/v1-0/user.yaml
+++ b/src/main/resources/db/changelog/v1-0/user.yaml
@@ -29,6 +29,11 @@ databaseChangeLog:
                   constraints:
                     nullable: false
               - column:
+                  name: password
+                  type: varchar(500)
+                  constraints:
+                    nullable: false
+              - column:
                   name: email
                   type: varchar(255)
                   constraints:
@@ -75,6 +80,9 @@ databaseChangeLog:
                   name: username
                   value: super
               - column:
+                  name: password
+                  value: $2a$10$.Qa2l9VysOeG5M8HhgUbQ.h8KlTBLdMY/slPwMtL/I5OYibYUFQle
+              - column:
                   name: email
                   value: super@user.com
               - column:
@@ -105,6 +113,9 @@ databaseChangeLog:
                   name: username
                   value: readonly
               - column:
+                  name: password
+                  value: $2a$10$.Qa2l9VysOeG5M8HhgUbQ.h8KlTBLdMY/slPwMtL/I5OYibYUFQle
+              - column:
                   name: email
                   value: readonly@user.com
               - column:
@@ -134,6 +145,9 @@ databaseChangeLog:
               - column:
                   name: username
                   value: standard
+              - column:
+                  name: password
+                  value: $2a$10$.Qa2l9VysOeG5M8HhgUbQ.h8KlTBLdMY/slPwMtL/I5OYibYUFQle
               - column:
                   name: email
                   value: standard@user.com
