Refactored Spring Security configuraiton to use Basic Auth to focus on a core Spring Security implementation. Create new logic for UserControllerIntegrationSpec Added TODO markers for the remaining test classes that need refactoring

--- a/src/main/resources/db/changelog/v1-0/user.yaml
+++ b/src/main/resources/db/changelog/v1-0/user.yaml
@@ -84,7 +84,7 @@ databaseChangeLog:
                   value: $2a$10$.Qa2l9VysOeG5M8HhgUbQ.h8KlTBLdMY/slPwMtL/I5OYibYUFQle
               - column:
                   name: email
-                  value: super@user.com
+                  value: support@LighthouseSoftware.com
               - column:
                   name: is_enabled
                   valueBoolean: true
