--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,3 +2,13 @@
 # Spring Testing
 #######################################################################################################################
 spring.profiles.active=test
+
+#######################################################################################################################
+# Data Sources
+#######################################################################################################################
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
