--- a/build.gradle
+++ b/build.gradle
@@ -32,11 +32,12 @@ repositories {
 }
 
 dependencies {
+
     // Spring
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web',         version:"${springBootVersion}"
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa',    version:"${springBootVersion}"
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-security',    version:"${springBootVersion}"
-    compile(group: 'org.springframework.security.oauth', name: 'spring-security-oauth2',         version:"2.0.12.RELEASE") {
+    compile(group: 'org.springframework.security.oauth', name: 'spring-security-oauth2',    version:'2.0.12.RELEASE') {
         exclude(module: 'jackson-mapper-asl') // We already have a more recent jackson via Spring Boot
     }
 
@@ -50,7 +51,7 @@ dependencies {
 
     // Other
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
-
+    
     // Testing
     testCompile(group: 'org.springframework.boot', name: 'spring-boot-starter-test', version:"${springBootVersion}") {
         exclude(module: 'commons-logging')
@@ -58,6 +59,7 @@ dependencies {
     testCompile group: 'org.spockframework', name: 'spock-core', version:'1.1-groovy-2.4-rc-3'
     testCompile group: 'org.spockframework', name: 'spock-spring', version:'1.1-groovy-2.4-rc-3'
     testCompile group: 'cglib', name: 'cglib-nodep', version:'3.2.4'
+    testCompile group: 'org.apache.httpcomponents', name: 'httpclient'
 }
 
 eclipse {
