--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -1,14 +1,24 @@
 #######################################################################################################################
 # Spring Testing
 #######################################################################################################################
-spring.profiles.active=test
+spring:
+  profiles:
+    active: test
 
 #######################################################################################################################
 # Data Sources
 #######################################################################################################################
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
-spring.datasource.url=jdbc:h2:mem:test
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
+spring:
+
+  jpa:
+    hibernate:
+      ddl-auto: none
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
+
+  datasource:
+    url: jdbc:h2:mem:test
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
