Fixed duplicate "spring" entry

--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -1,14 +1,10 @@
 #######################################################################################################################
-# Spring Testing
+# Spring Configuration
 #######################################################################################################################
 spring:
+
   profiles:
     active: test
-
-#######################################################################################################################
-# Data Sources
-#######################################################################################################################
-spring:
 
   jpa:
     hibernate:
