--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,9 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web',         version:"${springBootVersion}"
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa',    version:"${springBootVersion}"
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-security',    version:"${springBootVersion}"
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail',    version:"${springBootVersion}"
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-velocity',    version:"${springBootVersion}"
+
     compile(group: 'org.springframework.security.oauth', name: 'spring-security-oauth2',    version:'2.0.12.RELEASE') {
         exclude(module: 'jackson-mapper-asl') // We already have a more recent jackson via Spring Boot
     }
