--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -18,3 +18,14 @@ spring:
     username: sa
     password:
     driver-class-name: org.h2.Driver
+
+  mail:
+      host: smtp.gmail.com
+      port: 587
+      username: username #Replace this field with your Gmail username.
+      password: password           #Replace this field with your Gmail password.
+      protocol: smtp
+      properties.mail.smtp:
+          auth: true
+          starttls.enable: true
+          ssl.trust: smtp.gmail.com
