--- a/build.gradle
+++ b/build.gradle
@@ -34,9 +34,10 @@ repositories {
 dependencies {
 
     // Spring
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web',         version:"${springBootVersion}"
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa',    version:"${springBootVersion}"
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security',    version:"${springBootVersion}"
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web',             version:"${springBootVersion}"
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa',        version:"${springBootVersion}"
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security',        version:"${springBootVersion}"
+    compile group: 'org.springframework.security', name: 'spring-security-jwt',             version:'1.0.7.RELEASE'
     compile(group: 'org.springframework.security.oauth', name: 'spring-security-oauth2',    version:'2.0.12.RELEASE') {
         exclude(module: 'jackson-mapper-asl') // We already have a more recent jackson via Spring Boot
     }
