Added activation mail and account registration process

--- a/src/main/resources/db/changelog/v1-0/db.changelog.yaml
+++ b/src/main/resources/db/changelog/v1-0/db.changelog.yaml
@@ -9,3 +9,5 @@ databaseChangeLog:
       file: db/changelog/v1-0/permission.yaml
   - include:
       file: db/changelog/v1-0/role_permission.yaml
+  - include:
+      file: db/changelog/v1-0/token.yaml
