--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -20,6 +20,11 @@ spring:
     driver-class-name: org.h2.Driver
 
   mail:
-    host: localhost
-    port: 3025
-    protocol: smtp
+      host: localhost
+      port: 3025
+      protocol: smtp
+
+  freemarker:
+      template-loader-path: classpath:/email/
+      charset: UTF-8
+      suffix: .ftl
