--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -41,8 +41,8 @@ spring:
   mail:
       host: smtp.gmail.com
       port: 587
-      username: username #Replace this field with your Gmail username.
-      password: password           #Replace this field with your Gmail password.
+      username: jagadeesh.manne@lssinc.com #Replace this field with your Gmail username.
+      password: Jags@india           #Replace this field with your Gmail password.
       protocol: smtp
       properties.mail.smtp:
           auth: true
