Refactored the OAuth2Config to only work off of /api requests Removed servlet context of /api so that it can be used for OAuth2 Resource server. Base context is now / Added custom OAuth2 confirm_access JSP

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -48,7 +48,7 @@ spring:
 #######################################################################################################################
 server:
   port: 8080
-  contextPath: /api
+  contextPath: /
 
 #######################################################################################################################
 # Spring Security
