Refactored tests to conform to the OAuth2 workflow

--- a/src/main/resources/db/changelog/v1-0/client_grant.yaml
+++ b/src/main/resources/db/changelog/v1-0/client_grant.yaml
@@ -52,6 +52,15 @@ databaseChangeLog:
             columns:
               - column:
                   name: client_id
+                  valueNumeric: 1
+              - column:
+                  name: grant_type
+                  value: CLIENT_CREDENTIALS
+        - insert:
+            tableName: client_grant
+            columns:
+              - column:
+                  name: client_id
                   valueNumeric: 2
               - column:
                   name: grant_type
