--- a/src/main/resources/db/changelog/v1-0/client.yaml
+++ b/src/main/resources/db/changelog/v1-0/client.yaml
@@ -75,10 +75,10 @@ databaseChangeLog:
                   value: Launchpad AngularJS v1
               - column:
                   name: client_identifier
-                  value: angularv1
+                  value: client-super
               - column:
                   name: client_secret
-                  value: $2a$10$.Qa2l9VysOeG5M8HhgUbQ.h8KlTBLdMY/slPwMtL/I5OYibYUFQle
+                  value: secret
               - column:
                   name: is_secret_required
                   valueBoolean: false
@@ -108,10 +108,10 @@ databaseChangeLog:
                   value: Generic Server-to-Server
               - column:
                   name: client_identifier
-                  value: servertoserver
+                  value: client-standard
               - column:
                   name: client_secret
-                  value: $2a$10$.Qa2l9VysOeG5M8HhgUbQ.h8KlTBLdMY/slPwMtL/I5OYibYUFQle
+                  value: secret
               - column:
                   name: is_secret_required
                   valueBoolean: true
