--- a/build.gradle
+++ b/build.gradle
@@ -34,9 +34,10 @@ repositories {
 dependencies {
 
     // Spring
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web',         version:"${springBootVersion}"
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa',    version:"${springBootVersion}"
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security',    version:"${springBootVersion}"
+    compile group: 'org.springframework.boot',          name: 'spring-boot-starter-web',             version:"${springBootVersion}"
+    compile group: 'org.springframework.boot',          name: 'spring-boot-starter-data-jpa',        version:"${springBootVersion}"
+    compile group: 'org.springframework.boot',          name: 'spring-boot-starter-security',        version:"${springBootVersion}"
+    compile group: 'org.springframework.security',      name: 'spring-security-jwt',             version:'1.0.7.RELEASE'
     compile(group: 'org.springframework.security.oauth', name: 'spring-security-oauth2',    version:'2.0.12.RELEASE') {
         exclude(module: 'jackson-mapper-asl') // We already have a more recent jackson via Spring Boot
     }
@@ -45,9 +46,13 @@ dependencies {
     compile group: 'org.codehaus.groovy', name: 'groovy-all', version:'2.4.7'
 
     // Database
-    compile group: 'org.liquibase', name:'liquibase-core'
-    compile group: 'com.h2database', name: 'h2', version: '1.4.192'
-    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.40'
+    compile group: 'org.liquibase',     name:'liquibase-core'
+    compile group: 'com.h2database',    name: 'h2', version: '1.4.192'
+    compile group: 'mysql',             name: 'mysql-connector-java', version: '5.1.40'
+
+    // Login Web Form
+    compile group: 'org.apache.tomcat.embed',  name: 'tomcat-embed-jasper'
+    compile group: 'javax.servlet',            name: 'jstl'
 
     // Other
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
